# MessagingService

./: Cargo.toml
src/: kafka_consumer.rs  kafka_producer.rs  main.rs  oracle_database.rs  template_engine.rs
